--- a/src/app/Pages/Dashboard/styles.module.scss
+++ b/src/app/Pages/Dashboard/styles.module.scss
@@ -1,6 +1,7 @@
 .container {
   height: 100%;
   display: flex;
+  position: relative;
   background-color: #212f84;
 }
 
@@ -10,6 +11,32 @@
   display: flex;
   align-content: center;
   flex-direction: column;
+  transition: all 0.3s ease-in-out;
+}
+
+.right_side_content {
+  height: 100%;
+  background-color: #212f84;
+}
+
+@media (max-width: 1080px) {
+  .right_side_content {
+    margin-left: auto;
+    width: clamp(275px, 50vw, clamp(200px, 25%, 462px));
+  }
+}
+
+@media (max-width: 1080px) {
+  .right_side {
+    width: 200vw;
+    right: -100vw;
+    position: absolute;
+  }
+
+  .right_side[data-expand="true"] {
+    right: 0vw;
+    background: #ffffff30;
+  }
 }
 
 .left_side {
@@ -33,8 +60,15 @@
   }
 
   &::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 6px #212f84;
     background-color: #919ff1;
+    box-shadow: inset 0 0 6px #212f84;
+  }
+}
+
+@media (max-width: 1080px) {
+  .left_side {
+    width: 100%;
+    border-radius: 0;
   }
 }
 
@@ -113,6 +147,7 @@
   }
 
   &_avatar {
+    user-select: none;
     position: relative;
     width: clamp(80px, 15vh, 163px);
     height: clamp(80px, 15vh, 163px);
