--- a/src/app/Pages/Dashboard/Layout/Topics/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/Topics/styles.module.scss
@@ -41,108 +41,58 @@
     }
 
     .card {
-      width: 28%;
+      width: 26.3%;
+      height: 45.7vh;
       position: relative;
-      height: fit-content;
 
-      img {
-        width: 100%;
+      &_header {
+        display: flex;
+        flex-direction: column;
+        cursor: pointer;
+        height: 69%;
       }
 
-      &_content {
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+      &_avatar {
+        height: 87%;
+        border-top-right-radius: 40px;
+      }
+
+      &_edit {
+        height: 13%;
+      }
+
+      &_edit_image {
+        width: 17.5%;
+      }
+
+      &_footer {
+        background-image: linear-gradient(to bottom, #0088e3, #2d1e1e 139%);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 20.7vh;
+        width: 16.1vw;
+        border-radius: 5px 5px 0 20px;
         position: absolute;
+        z-index: 1;
+        top: 54.6%;
+        left: 17%;
 
-        &_header {
-          height: 53%;
-          display: flex;
-          margin: 5% 6% 0;
-          cursor: pointer;
-          transition: all 1s;
-          align-items: center;
-          background: #1d79ad00;
-          justify-content: center;
-          border-top-right-radius: 40px;
-
-          &:hover {
-            background: #1d79ad9e;
-          }
-
-          .topic_avatar {
-            margin-top: 15%;
-            position: relative;
-            width: clamp(60px, calc(min(15vh, 8vw)), 163px);
-            height: clamp(60px, calc(min(15vh, 8vw)), 163px);
-
-            img {
-              position: absolute;
-              width: clamp(60px, calc(min(15vh, 8vw)), 163px);
-              height: clamp(60px, calc(min(15vh, 8vw)), 163px);
-
-              &:nth-child(1) {
-                top: -10%;
-                right: -20%;
-                width: clamp(60px, calc(min(7.5vh, 4vw)), 84px);
-                height: clamp(60px, calc(min(7.5vh, 4vw)), 84px);
-              }
-            }
-
-            .avatar {
-              border-radius: 50%;
-              margin-bottom: 30px;
-              border: solid 7px rgba(4, 22, 128, 0.88);
-            }
-          }
+        span {
+          color: white;
+          font-size: clamp(18px, 1.4vw, 27px);
+          font-weight: 600;
+          user-select: none;
+          margin-bottom: clamp(5%, 10%, 23px);
         }
 
-        &_footer {
-          height: 42%;
-          display: flex;
-          position: relative;
-          align-items: center;
-          flex-direction: column;
-          justify-content: center;
-
-          &_edit {
-            top: 5%;
-            left: 8%;
-            width: 36px;
-            height: 36px;
-            display: flex;
-            cursor: pointer;
-            position: absolute;
-            border-radius: 18px;
-            align-items: center;
-            transition: all 0.2s;
-            justify-content: center;
-            background-color: #254f98;
-
-            &:hover {
-              background-color: #305eae;
-            }
-
-            img {
-              width: unset;
-            }
-          }
-
-          p {
-            width: 65%;
-            color: #f9f1f1;
-            user-select: none;
-            text-align: center;
-          }
-
-          span {
-            color: white;
-            font-size: 22px;
-            font-weight: 700;
-            user-select: none;
-            margin-bottom: 15px;
-          }
+        p {
+          width: 77.4%;
+          color: #f9f1f1;
+          user-select: none;
+          text-align: center;
+          font-size: clamp(12px, 1vw, 19px);
         }
       }
     }
