--- a/src/app/Pages/CreateTicket/styles.module.scss
+++ b/src/app/Pages/CreateTicket/styles.module.scss
@@ -1,10 +1,8 @@
 .container {
   width: 100%;
-  height: 100%;
-  display: flex;
-  overflow-y: scroll;
-  align-items: center;
-  flex-direction: column;
+  overflow: auto;
+  height: inherit;
+  background: #eeeeee;
 
   .header {
     width: 100%;
@@ -13,8 +11,8 @@
     padding-right: 5%;
     font-weight: bold;
     align-items: center;
-    background-color: #265ecd;
     justify-content: flex-end;
+    background-color: #103cb7;
     height: clamp(90px, 9.7vh, 111px);
 
     img:nth-child(2n) {
@@ -43,11 +41,34 @@
     }
   }
 
+  .welcome {
+    width: 100%;
+    display: flex;
+    text-align: start;
+    padding-right: 10%;
+    align-items: center;
+    justify-content: flex-end;
+    background-color: #00b9be;
+    height: clamp(20px, 4.7vh, 45px);
+    font-size: clamp(11px, 1.2vw, 23px);
+
+    p {
+      margin: 0;
+      direction: rtl;
+      color: white;
+    }
+  }
+
   .card_container {
     display: flex;
+    margin: 7vh auto;
+    border-radius: 10px;
     align-items: center;
     flex-direction: column;
-    width: clamp(350px, 30%, 566px);
+    border: solid 1px #dadde0;
+    box-shadow: 0 2px 3px 0 #dadde0;
+    padding: clamp(15px, 1.7vw, 32px);
+    width: clamp(350px, 72vw, 1400px);
 
     .loading {
       top: 50%;
@@ -55,9 +76,8 @@
     }
 
     .avatar {
-      margin-top: 3vh;
+      object-fit: cover;
       border-radius: 50%;
-      border: solid 5px #265ecd;
       width: clamp(100px, 8vw, 150px);
       height: clamp(100px, 8vw, 150px);
     }
@@ -67,15 +87,15 @@
     }
 
     .input_box_title {
-      color: #000000;
       margin: 2vh 0 0;
+      color: #333333;
       font-weight: bold;
-      font-size: clamp(16px, 1.7vw, 32px);
+      font-size: clamp(16px, 1.5vw, 25px);
     }
 
     .input_box_description {
-      color: #707070;
-      margin: 4vh 0 0;
+      margin: 2vh 0 0;
+      color: #333333;
       font-size: clamp(12px, 0.9vw, 16px);
     }
 
@@ -114,6 +134,27 @@
           background-color: #27bdc1;
         }
       }
+    }
+  }
+
+  .footer {
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    position: absolute;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    background-color: #103cb7;
+    height: clamp(20px, 4.7vh, 45px);
+    font-size: clamp(11px, 1.2vw, 23px);
+
+    p {
+      margin: 0;
+      margin-right: 10px;
+      direction: rtl;
+      color: white;
+      display: inline;
     }
   }
 }
