--- a/src/app/Components/DropDown/styles.module.scss
+++ b/src/app/Components/DropDown/styles.module.scss
@@ -20,7 +20,7 @@
     border:1px solid blue;
     border-radius: 5px;
   }
-  &[data-active='true'] {
+  &[data-open='true'] {
     box-shadow: unset;
     .drop_down {
       height: 180px;
