--- a/src/app/Pages/CreateTicket/styles.module.scss
+++ b/src/app/Pages/CreateTicket/styles.module.scss
@@ -45,11 +45,10 @@
     width: 100%;
     display: flex;
     text-align: start;
-    padding-right: 10%;
     align-items: center;
+    padding:15px 10% 15px 0;
     justify-content: flex-end;
     background-color: #00b9be;
-    height: clamp(20px, 4.7vh, 45px);
     font-size: clamp(11px, 1.2vw, 23px);
 
     p {
@@ -99,18 +98,12 @@
       font-size: clamp(12px, 0.9vw, 16px);
     }
 
-    .input_class {
-      width: 100%;
-      margin-bottom: 6%;
+    .input_container {
+      margin-bottom: 50px;
     }
 
-    .input {
-      background-color: #ffffff;
-      font-size: clamp(14px, 1.1vw, 20px);
-    }
-
-    .input_label {
-      font-size: clamp(14px, 1.1vw, 20px);
+    .tag_input_class {
+      margin-top: 20px;
     }
 
     .submit_container {
@@ -118,10 +111,6 @@
       display: flex;
       margin-top: 6%;
       align-items: center;
-
-      .tag_input_class {
-        width: 80%;
-      }
 
       .enter_button {
         width: 20%;
@@ -144,10 +133,10 @@
     position: absolute;
     text-align: center;
     align-items: center;
+    padding:15px 10% 15px 0;
     justify-content: center;
     background-color: #103cb7;
-    height: clamp(20px, 4.7vh, 45px);
-    font-size: clamp(11px, 1.2vw, 23px);
+    font-size: clamp(11px, 1.2vw, 18px);
 
     p {
       margin: 0;
