--- a/src/app/Pages/CreateTicket/styles.module.scss
+++ b/src/app/Pages/CreateTicket/styles.module.scss
@@ -46,7 +46,7 @@
     display: flex;
     text-align: start;
     align-items: center;
-    padding:15px 10% 15px 0;
+    padding: 15px 10% 15px 0;
     justify-content: flex-end;
     background-color: #00b9be;
     font-size: clamp(11px, 1.2vw, 23px);
@@ -98,6 +98,10 @@
       font-size: clamp(12px, 0.9vw, 16px);
     }
 
+    .topic_type_container {
+      margin: 20px 0;
+    }
+
     .input_container {
       margin-bottom: 50px;
     }
@@ -120,18 +124,26 @@
     .submit_container {
       width: 100%;
       display: flex;
-      margin-top: 6%;
+      margin-top: 20px;
       align-items: center;
 
       .enter_button {
-        width: 20%;
+        width: 10%;
         height: 36px;
+        display: flex;
+        color: #ffffff;
+        cursor: pointer;
+        min-width: 110px;
         margin-right: 10px;
         align-self: center;
-        background-color: #26a9ad;
+        border-radius: 6px;
+        align-items: center;
+        transition: all 0.5s;
+        justify-content: center;
+        background-color: #0088e3;
 
         &:hover {
-          background-color: #27bdc1;
+          background-color: #38a5ea;
         }
       }
     }
@@ -139,12 +151,13 @@
 
   .footer {
     bottom: 0;
+    z-index: 10;
     width: 100%;
     display: flex;
     position: absolute;
     text-align: center;
     align-items: center;
-    padding:15px 10% 15px 0;
+    padding: 15px 10% 15px 0;
     justify-content: center;
     background-color: #103cb7;
     font-size: clamp(11px, 1.2vw, 18px);
