CleanUp Code Update Dependencies

--- a/src/app/Components/TTextArea/styles.scss
+++ b/src/app/Components/TTextArea/styles.scss
@@ -1,6 +1,6 @@
 .fr-box.fr-basic .fr-wrapper {
   background: #00000000 !important;
-  border-bottom: 1px solid #CCCCCC !important;
+  border-bottom: 1px solid #cccccc !important;
 }
 
 .fr-second-toolbar {
