--- a/src/app/Components/EditTopicCard/styles.module.scss
+++ b/src/app/Components/EditTopicCard/styles.module.scss
@@ -17,7 +17,7 @@
   padding-right: 4%;
   align-items: center;
   background-color: #265ecd;
-  justify-content: flex-end;
+  justify-content: flex-start;
   border-radius: 50px 10px 0 0;
 
   img:nth-child(1) {
