--- a/src/app/Components/TDropDown/styles.module.scss
+++ b/src/app/Components/TDropDown/styles.module.scss
@@ -1,4 +1,5 @@
 .container {
+  z-index: 1;
   width: 100%;
   cursor: pointer;
   text-align: end;
@@ -54,6 +55,7 @@
       display: block;
       text-align: end;
       padding: 8px 20px;
+      transition: all 0.3s;
 
       &:hover {
         overflow: hidden;
