Update TDropDown Tests

--- a/src/app/Components/TDropDown/styles.module.scss
+++ b/src/app/Components/TDropDown/styles.module.scss
@@ -21,6 +21,7 @@
     p {
       flex: 1;
       margin: 0;
+      height: 22px;
       text-align: end;
     }
   }
@@ -52,16 +53,25 @@
     .item {
       color: #000;
       margin: 0.5px;
-      display: block;
+      display: flex;
       text-align: end;
-      padding: 8px 20px;
       transition: all 0.3s;
+      padding: 8px 20px 8px 10px;
 
       &:hover {
         overflow: hidden;
         position: relative;
         border-radius: 5px;
         background-color: #dadde0;
+      }
+
+      p {
+        flex: 1;
+        margin: 0;
+      }
+
+      .checkmark {
+        width: 20px;
       }
     }
   }
