--- a/src/app/Dialogs/ManageTopicUser/styles.module.scss
+++ b/src/app/Dialogs/ManageTopicUser/styles.module.scss
@@ -1,11 +1,13 @@
 .container {
+  border-radius: 5px;
   width: clamp(350px, 30vw, 580px);
 }
 
 .header {
-  padding: 15px;
   color: white;
+  padding: 15px;
   text-align: end;
+  margin-top: -1px;
   background: #1975bb;
 
   span {
@@ -35,4 +37,11 @@
   align-items: center;
   flex-direction: row;
   justify-content: center;
+}
+
+.loading {
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, 50%);
 }
