--- a/src/app/Pages/Dashboard/Layout/Topics/EditTopic/RoleManagement/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/Topics/EditTopic/RoleManagement/styles.module.scss
@@ -1,9 +1,11 @@
 $border_color: #cccccc;
 .container {
+  flex: 1;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
 }
+
 .header {
   width: 98%;
   display: flex;
@@ -15,6 +17,7 @@ $border_color: #cccccc;
   border: 1px solid #cccccc;
   box-shadow: 0 1px 1px 0 #cccccc, 0 0 4px 0 #cccccc2e;
 }
+
 .mode_box {
   background-color: #e5e9ef;
   width: 32.7%;
@@ -26,6 +29,7 @@ $border_color: #cccccc;
   align-items: center;
   justify-content: space-around;
 }
+
 .select_mode {
   display: inline-flex;
   align-items: center;
@@ -38,49 +42,83 @@ $border_color: #cccccc;
   color: #606f7b;
   font-size: clamp(12px, 1vw, 20px);
 }
-.add_button {
-  background-color: #1975bb;
-  border-radius: 8px;
-  width: 13.3%;
-  height: 62.5%;
-  margin-left: 3.2%;
 
-  span {
-    margin: 6px;
-    font-size: clamp(12px, 1vw, 20px);
+.not_data {
+  flex: 1;
+  display: flex;
+  margin-bottom: 20%;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+
+  svg {
+    width: 85px;
+    height: 85px;
+    fill: #5ea3d0;
+  }
+  .not_data_text {
+    font-size: 20px;
+    margin-top: 30px;
+    font-weight: 600;
   }
 }
 
-.table_class {
-  width: 98%;
-  border-collapse: separate;
+.create {
+  &_no_data {
+    margin-top: 20px;
+
+    &_label {
+      color: white;
+      font-size: 18px;
+      font-weight: 600;
+    }
+  }
+}
+
+.table {
+  width: 100%;
+  table-layout: auto;
+  text-align: center;
   border-spacing: 0 1.8vh;
+  border-collapse: separate;
 
   th {
-    background-color: #1975bb;
-    height: 6.4vh;
     border: none;
+    color: white;
+    background-color: #2168bd;
+
+    &:first-of-type {
+      border-radius: 0 10px 10px 0;
+    }
+
+    &:last-of-type {
+      border-radius: 10px 0 0 10px;
+    }
   }
 
   tr {
-    height: 6.4vh;
+    height: 70px;
   }
 
   td {
-    border-top: 1px solid $border_color;
-    border-bottom: 1px solid $border_color;
     border-left: 0;
     border-right: 0;
+    font-size: 16px;
+    border-top: 1px solid $border_color;
+    border-bottom: 1px solid $border_color;
 
     &:first-child {
+      border-radius: 0 5px 5px 0;
       border-right: 1px solid $border_color;
     }
 
     &:last-child {
+      border-radius: 5px 0 0 5px;
       border-left: 1px solid $border_color;
     }
   }
 }
+
 .edit_icon {
   cursor: pointer;
   margin-left: 0.7vw;
