--- a/src/app/Pages/Dashboard/Layout/Topics/EditTopic/UserManagement/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/Topics/EditTopic/UserManagement/styles.module.scss
@@ -1,9 +1,10 @@
 $border_color: #cccccc;
 .container {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
 }
+
 .header {
   width: 98%;
   display: flex;
@@ -15,17 +16,19 @@ $border_color: #cccccc;
   border: 1px solid #cccccc;
   box-shadow: 0 1px 1px 0 #cccccc, 0 0 4px 0 #cccccc2e;
 }
+
 .mode_box {
-  background-color: #e5e9ef;
-  width: 32.7%;
   height: 75%;
+  width: 32.7%;
+  display: flex;
   border-radius: 8px;
   margin-right: 1.1%;
-  display: flex;
   flex-direction: row;
   align-items: center;
+  background-color: #e5e9ef;
   justify-content: space-around;
 }
+
 .select_mode {
   display: inline-flex;
   align-items: center;
@@ -38,12 +41,13 @@ $border_color: #cccccc;
   color: #606f7b;
   font-size: clamp(12px, 1vw, 20px);
 }
+
 .add_button {
-  background-color: #1975bb;
-  border-radius: 8px;
   width: 13.3%;
   height: 62.5%;
+  border-radius: 8px;
   margin-left: 3.2%;
+  background-color: #1975bb;
 
   span {
     margin: 6px;
@@ -51,37 +55,64 @@ $border_color: #cccccc;
   }
 }
 
-.table_class {
-  width: 98%;
-  border-collapse: separate;
+.table {
+  width: 100%;
+  table-layout: auto;
+  text-align: center;
   border-spacing: 0 1.8vh;
+  border-collapse: separate;
 
   th {
-    background-color: #1975bb;
-    height: 6.4vh;
     border: none;
-    width: 33%;
+    color: white;
+    background-color: #2168bd;
+
+    &:first-of-type {
+      border-radius: 0 10px 10px 0;
+    }
+
+    &:last-of-type {
+      border-radius: 10px 0 0 10px;
+    }
   }
 
   tr {
-    height: 6.4vh;
+    height: 70px;
   }
 
   td {
-    border-top: 1px solid $border_color;
-    border-bottom: 1px solid $border_color;
     border-left: 0;
     border-right: 0;
+    font-size: 16px;
+    border-top: 1px solid $border_color;
+    border-bottom: 1px solid $border_color;
 
     &:first-child {
+      border-radius: 0 5px 5px 0;
       border-right: 1px solid $border_color;
     }
 
     &:last-child {
+      border-radius: 5px 0 0 5px;
       border-left: 1px solid $border_color;
     }
   }
+
+  .user_name {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+      width: 45px;
+    }
+
+    span {
+      margin-right: 10px;
+    }
+  }
 }
+
 .edit_icon {
   cursor: pointer;
   margin-left: 0.7vw;
