Update Tickets Page

--- a/src/app/Pages/Dashboard/Layout/Tickets/Ticket/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/Tickets/Ticket/styles.module.scss
@@ -64,7 +64,7 @@
     margin-bottom: 25px;
     flex-direction: column;
     box-shadow: 0 3px 8px 0 #76787d;
-    background-image: url('../../../../Assets/Images/Files/chat_background.jpg');
+    background-image: url('../../../../../Assets/Images/Files/chat_background.jpg');
 
     &_header {
       display: flex;
