--- a/src/app/Components/TButton/styles.module.scss
+++ b/src/app/Components/TButton/styles.module.scss
@@ -9,6 +9,11 @@
   justify-content: center;
   background-color: #0088e3;
 
+  &[data-disabled='true'] {
+    cursor: unset;
+    opacity: 1 !important;
+  }
+
   &:hover {
     opacity: 0.8;
   }
