Update Forward Ticket Dialog

--- a/src/app/Dialogs/ForwardTicket/CategoryItem/styles.module.scss
+++ b/src/app/Dialogs/ForwardTicket/CategoryItem/styles.module.scss
@@ -8,6 +8,10 @@
   transition: all 0.3s;
   border: #d3d6dc solid 1px;
 
+  &[data-selected='true'] {
+    background: #d5e1e6;
+  }
+
   &:hover {
     background: #d5e1e6;
   }
