--- a/src/app/Pages/Dashboard/Layout/Tickets/styles.module.scss
+++ b/src/app/Pages/Dashboard/Layout/Tickets/styles.module.scss
@@ -1,7 +1,10 @@
 $border_color: #cccccc;
 
 .container {
-  padding: 25px 50px;
+  flex: 1;
+  display: flex;
+  padding: 15px 3vw;
+  flex-direction: column;
 }
 
 .top {
@@ -115,4 +118,9 @@ $border_color: #cccccc;
   display: inline-block;
   padding: 2px 10px;
   font-size: clamp(13px, 0.8vw, 16px);
+}
+
+.pagination {
+  margin-top: auto;
+  margin-bottom: 4rem;
 }
